--- a/styles.css
+++ b/styles.css
@@ -388,7 +388,7 @@ section {
   padding: 40px;
   color: #000;
   background: 
-    linear-gradient(rgba(255,255,255,0., rgba(255,255,255,0.8)),
+    linear-gradient(rgba(255,255,255,0.), rgba(255,255,255,0.8)),
     url("ctu.jpg") center/cover no-repeat;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
